fix: testando overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ header {
   max-width: 100vw;
   width: 100%;
   height: 10%;
-  overflow-x: visible;
+  overflow: visible;
 }
 
 .divHeader {
